# photo-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  apple_labels.json  apple_labels_raw.txt  autotag.py  build_landmarks.py  categorize_labels.py  cli.py  clip_tagger.py  drop_digikam_tags.py  duplicates.py  landmarks.py  pyproject.toml  ram_tag_mapping.json  ram_tagger.py  sync_faces.py  taxonomy.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: xmp-schema.md
photo_tools/: autotag.py  build_landmarks.py  cli.py  clip_tagger.py  constants.py  debug_viewer.py  default_config.yaml  duplicates.py  helpers.py  landmarks.py  ram_tagger.py  taxonomy.py
scripts/: migrate_xmp.py  migrate_xmp.sh  print_taxonomy.py  strip_live_photo_motion_tags.py  strip_ocr_mwg_regions.py
src/photo_tools/: __main__.py  autotag.py  build_landmarks.py  cli.py  clip_tagger.py  config.py  constants.py  dates_cmd.py  debug_viewer.py  default_config.yaml  drop_digikam_tags.py  duplicates.py  exiftool_phototools.config  find_similar.py  helpers.py  landmarks.py  logging_setup.py  ram_tagger.py  tags_cmd.py  taxonomy.py  tui.py
src/photo_tools/data/: ram_tag_mapping.json  ram_tag_mapping.yaml
tests/: conftest.py  test_autotag_pure.py  test_build_landmarks.py  test_config.py  test_helpers_pure.py  test_landmarks.py
